@@ -3,6 +3,7 @@ package org.openpkw.services.user.dto;
 import org.openpkw.validation.RestClientErrorMessage;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -28,8 +29,8 @@ public class ResponseDTO implements Serializable {
         errors.add(error);
     }
 
-    public static <T extends ResponseDTO> T buildErrorMessage(RestClientErrorMessage errorMessage, Class<T> type) throws IllegalAccessException, InstantiationException {
-        T result = type.newInstance();
+    public static <T extends ResponseDTO> T buildErrorMessage(RestClientErrorMessage errorMessage, Class<T> type) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        T result = type.getDeclaredConstructor().newInstance();
         result.addError(new ErrorDTO(errorMessage.getErrorCode(), errorMessage.getErrorMessage()));
         return result;
     }
